Correction alignement et fermeture des balises div

--- a/sample/page.css
+++ b/sample/page.css
@@ -11,3 +11,13 @@
     text-transform: none;
     word-wrap: break-word;
     }
+
+.flex-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-container > div {
+
+}
